[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memory"
version = "0.1"
authors = [
  { name="Carlo Moro", email="cnmoro@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cnmoro/Mini-Vector-DB"
"Bug Tracker" = "https://github.com/cnmoro/Mini-Vector-DB"
