[build-system]
requires = ["setuptools>=61.0", "mongita", "logzero", "sumy", "langdetect", "openai", "minivectordb", "text-util-en-pt", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "chatmemorydb"
version = "0.7"
authors = [
  { name="Carlo Moro", email="cnmoro@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cnmoro/ChatMemory"
"Bug Tracker" = "https://github.com/cnmoro/ChatMemory/issues"
