[build-system]
requires = ["setuptools>=61.0", "minivectordb>=2.2.1", "logzero", "numpy<2", "nltk", "scikit-learn", "tiktoken", "fasttext"]
build-backend = "setuptools.build_meta"

[project]
name = "chatmemorydb"
version = "1.3"
authors = [
  { name="Carlo Moro", email="cnmoro@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "minivectordb>=2.2.1",
    "logzero",
    "numpy<2",
    "nltk",
    "scikit-learn",
    "tiktoken",
    "fasttext"
]

[project.urls]
"Homepage" = "https://github.com/cnmoro/ChatMemory"
"Bug Tracker" = "https://github.com/cnmoro/ChatMemory/issues"
